# payment_service

./: .env.example  .gitignore  ARCHITECTURAL_ADVICE.md  ARCHITECTURE_FLOW.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  payments.http  pyproject.toml  requirements.md  requirements.txt
migrations/: env.py
migrations/versions/: 03ef0a6799bc_add_indexes_to_payments_and_outbox.py  7bc0a9014394_add_index_to_outbox_created_at.py  e2098469aab5_initial_migration.py  f8ed48433421_add_timezone_to_datetime_fields.py
src/payment/: main.py
src/payment/application/interfaces/: payment_repository.py
src/payment/application/schemas/: events.py  integration_events.py
src/payment/application/use_cases/: create_payment.py  get_payment.py  process_payment.py
src/payment/domain/entities/: outbox.py  payment.py
src/payment/domain/value_objects/: payment_enums.py
src/payment/infrastructure/config/: settings.py
src/payment/infrastructure/database/: mappers.py  session.py
src/payment/infrastructure/mq/: broker.py  consumer.py  relay.py
src/payment/presentation/api/: dependencies.py
src/payment/presentation/schemas/: payment.py
tests/integration/: test_api_auth.py  test_payments_api.py
tests/integration/infrastructure/database/: test_payment_repository.py
tests/integration/infrastructure/mq/: test_consumer.py
tests/unit/: conftest.py
tests/unit/application/use_cases/: conftest.py  test_create_payment.py  test_get_payment.py  test_payment_use_cases.py  test_process_payment.py
tests/unit/domain/: test_payment_entity.py
(+6 files in other folders)
