[project]
name = "payment-service"
version = "1.0.2"
description = "Async payment processing service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "faststream[rabbit]",
    "faststream[cli]",
    "uvicorn",
    "httpx",
    "python-multipart",
    "python-dotenv",
    "pydantic-settings",
    "tenacity",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "faststream.*"
ignore_missing_imports = true
